--- a/final.html
+++ b/final.html
@@ -33,7 +33,7 @@
                 </ol>
             <li>HTML</li>
                 <ul>
-                    <li>stands for <b>hyper text markup language</b> for more info visit <a href="https://controller.access.network/101/portal/">link</a></li>
+                    <li>stands for <b>hyper text markup language</b> for more info visit <a href="https://strobe.cool/">link</a></li>
                     <li>lots of tags</li>
                         <ul>
                             <li>Boilerplate</li>
